--- a/eShop.ServiceLayer/eShop.ServiceLayer.csproj
+++ b/eShop.ServiceLayer/eShop.ServiceLayer.csproj
@@ -6,4 +6,8 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <ProjectReference Include="..\eShop.DataLayer\eShop.DataLayer.csproj" />
+  </ItemGroup>
+
 </Project>
