--- a/eShopOpgave.BlazorUI/eShopOpgave.BlazorUI.csproj
+++ b/eShopOpgave.BlazorUI/eShopOpgave.BlazorUI.csproj
@@ -11,6 +11,7 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Blazored.Modal" Version="7.1.0" />
     <PackageReference Include="Blazored.Toast" Version="4.1.0" />
   </ItemGroup>
 
