--- a/eShop.WebApp/appsettings.json
+++ b/eShop.WebApp/appsettings.json
@@ -6,6 +6,6 @@
     }
   },
   "ConnectionStrings": {
-    "SQLConnectionString": "Data Source=(localdb)\\MSSQLLocalDB;Initial Catalog=eShopDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
+    "SQLConnectionString": "Data Source=S-HF-DB-001\\SQLEXPRESS01;Initial Catalog=eShopDB;Integrated Security=True;Connect Timeout=30;Encrypt=False;Trust Server Certificate=False;Application Intent=ReadWrite;Multi Subnet Failover=False"
   }
 }
